<resources>
    <string name="app_name">sandbox</string>
    <!-- Index -->
    <string name="transitions_without_act_frag">Transitions without Activities or Fragments</string>
    <string name="learning_rx_java">Learning RxJava</string>
    <string name="kotlin_in_action">Kotlin in Action</string>

    <string name="chapter_one_rx">Chapter One</string>
    <string name="chapter_two_rx">Chapter Two</string>


    <string name="animate_layout_changes">Animate Layout Changes</string>
    <string name="transition_manager_layout_changes">Transition Manager Layout Changes</string>
    <string name="shrink_linear_layout">Shrink transition with LL </string>
    <string name="shrink_constraint_layout">Shrink transition with CL </string>

    <string name="animate_visibility">Animate Visibility</string>
    <string name="animate_layout_params">Animate LayoutParams</string>
    <string name="auto_transition">Use AutoTransition?</string>

    <string name="alarm">Alarm</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</string>
    <string name="call_000">Call 000</string>
    <string name="help">Help</string>
    <string name="im_ok">IM OKAY</string>
    <string name="triggering_alarm">Triggering alarm</string>


</resources>
