<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="a2.sandbox.TransitionsWithoutActivitiesFragments">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/animate_layout_changes"
            android:onClick="showAnimateLayoutChangesFragment"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transition_manager_layout_changes"
            android:onClick="showTransitionManagerLayoutChangesFragment"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shrink_linear_layout"
            android:onClick="showShrinkLinearLayoutFragment"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shrink_constraint_layout"
            android:onClick="showShrinkConstraintLayoutFragment"/>

    </LinearLayout>

</FrameLayout>
